--- a/sengou/sengou-item/sengou-item-service/pom.xml
+++ b/sengou/sengou-item/sengou-item-service/pom.xml
@@ -9,7 +9,6 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.sengou.item</groupId>
     <artifactId>sengou-item-service</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
@@ -69,6 +68,12 @@
             <groupId>com.sengou.common</groupId>
             <artifactId>sengou-common</artifactId>
             <version>${sengou.latest.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.yinlinkrc.qihang.pagetmpl</groupId>
+            <artifactId>qihang-pagetmpl-interface</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
